fixed password requirement copy, fixed alignment on drop down box in css, created route for index

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ margin-top: 30px
 }
 
 .dropdown {
-  padding-left: 125px;
+  padding-left: 32%;
   display:block;
   
   
